--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"关于沈阳农业大学的一些新生可能想知道的信息"，
+    "subTitle":"我是沈阳农业大学一名电气工程及其自动化专业的学生，此博客用于提供给今年刚刚高考完并且想要了解沈阳农业大学各种信息的高中毕业生们"，
+    "avatarUrl":"https://i1.hdslb.com/bfs/face/425d6a5e3758cb02dfb57e06c0429198a6034568.jpg@240w_240h_1c_1s_!web-avatar-nav.avif"，
     "GMEEK_VERSION":"last"
 }
